Project Sistema_Votaciones {
  database_type: 'MySQL'
  Note: 'Base de datos optimizada para garantizar anonimato, censos y seguridad.'
}

Table usuarios [headercolor: #1A5276] {
  id integer [pk, increment]
  dni varchar(9) [not null, unique, note: 'Fundamental para verificar identidad real']
  username varchar(50) [not null, unique]
  password varchar(255) [not null, note: 'Debe ir hasheada (bcrypt/argon2)']
  nombre varchar(50) [not null]
  apellidos varchar(100) [not null]
  email varchar(100) [not null, unique]
  num_telefono varchar(9) [not null, unique]
  provincia varchar(50) [not null]
  ciudad varchar(50) [not null]
  rol varchar(20) [not null, default: 'votante', note: 'votante, admin_empresa, admin_gobierno']
  fecha_creacion timestamp [default: 'now()']
}

Table votaciones [headercolor: #196F3D] {
  id integer [pk, increment]
  id_autor integer [not null]
  titulo varchar(100) [not null]
  descripcion text
  tipo varchar(30) [not null, default: 'publica', note: 'publica, privada, gubernamental']
  fecha_creacion timestamp [not null, default: 'now()']
  fecha_inicio timestamp [not null]
  fecha_final timestamp [not null]
  cerrada bool [not null, default: false]
  razon_cierre text
}
Ref: votaciones.id_autor > usuarios.id [delete: cascade, update: no action]

// Tabla para definir quién puede votar en votaciones privadas (empresas, vecinos)
Table censo_votaciones [headercolor: #9A7D0A] {
  id_votacion integer [not null]
  id_usuario integer [not null]
  
  indexes {
    (id_votacion, id_usuario) [unique, note: 'Un usuario solo está una vez en el censo']
  }
}
Ref: censo_votaciones.id_votacion > votaciones.id [delete: cascade]
Ref: censo_votaciones.id_usuario > usuarios.id [delete: cascade]

Table opciones [headercolor: #900C3F] {
  id integer [pk, increment]
  id_votacion integer [not null]
  nombre_opcion varchar(50) [not null]
  desc_opcion text
}
Ref: opciones.id_votacion > votaciones.id [delete: cascade, update: no action]

// SEPARACIÓN DE VOTO PARA GARANTIZAR ANONIMATO
// Tabla 1: Registra QUIÉN ha votado para evitar el doble voto.
Table registro_participacion [headercolor: #000000] {
  id integer [pk, increment]
  id_votacion integer [not null]
  id_votante integer [not null]
  fecha_participacion timestamp [not null, default: 'now()']
  
  indexes {
    (id_votacion, id_votante) [unique, note: 'Garantiza que nadie vote dos veces']
  }
}
Ref: registro_participacion.id_votacion > votaciones.id [delete: cascade]
Ref: registro_participacion.id_votante > usuarios.id [delete: cascade]

// Tabla 2: Registra QUÉ se ha votado, sin saber quién lo hizo.
Table votos_anonimos [headercolor: #000000] {
  id integer [pk, increment]
  id_votacion integer [not null]
  id_opcion integer [not null]
  hash_integridad varchar(255) [unique, note: 'Hash generado por backend para verificar que el voto no fue manipulado en BBDD']
  fecha_voto timestamp [not null, default: 'now()', note: 'Se puede guardar con menos precisión (solo hora) para evitar ataques de correlación de tiempo']
}
Ref: votos_anonimos.id_votacion > votaciones.id [delete: cascade]
Ref: votos_anonimos.id_opcion > opciones.id [delete: cascade]